# near-abi-demo

./: Cargo.toml
adder/: Cargo.toml
adder/src/: lib.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
cross-contract-call/: Cargo.toml
cross-contract-call/src/: lib.rs
