[package]
name = "adder"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", branch = "daniyar/abi-macro", features = ["unstable"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
