[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
near-account-id = "0.12.0"
near-crypto = "0.12.0"
near-primitives = "0.12.0"
near-sdk = { git = "https://github.com/near/near-sdk-rs", branch = "daniyar/abi-macro", features = ["unstable"] }
near-abi-rs = { git = "https://github.com/itegulov/near-abi-rs" }
serde_json = "1.0"
serde = "1.0"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tokio = { version = "1.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
workspaces = "0.3.0"

[build-dependencies]
anyhow = "1.0"
near-abi-rs = { git = "https://github.com/itegulov/near-abi-rs" }
