[package]
name = "cross-contract-call"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", branch = "daniyar/abi-macro", features = ["unstable"] }
near-sdk-abi = { git = "https://github.com/itegulov/near-sdk-abi" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
